<?xml version="1.0"?>
<package format="2">
  <name>guidance_planner</name>
  <version>0.0.0</version>
  <description>The guidance_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libgsl</build_depend>
  <build_depend>libomp-dev</build_depend>
  <build_depend>pkg-config</build_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>ros_tools</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
  
</package>
